# Hydro_Firmware

./: .gitignore  README.md
firmware/: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  README.md  STM32U5A5ZJTXQ_FLASH.ld  STM32U5A5ZJTXQ_RAM.ld  compile_commands.json  firmware.ioc  firmware.launch
firmware/.ai/: network_1744270197643_model_quantized.tflite_c_graph.json  network_1744270197643_model_quantized.tflite_c_info.json  network_1744270197643_model_quantized.tflite_report.json  network_1744270197720_model_quantized.tflite_c_graph.json  network_1744270197720_model_quantized.tflite_c_info.json  network_1744270197720_model_quantized.tflite_report.json  network_1744270197720_null_c_graph.json  network_1744270197720_null_c_info.json  network_1744270197720_null_report.json  network_miniresnetv2_2stacks_64x50_tl_int8.tflite_c_graph.json  network_miniresnetv2_2stacks_64x50_tl_int8.tflite_c_info.json  network_miniresnetv2_2stacks_64x50_tl_int8.tflite_report.json  network_model_quantized.tflite_c_graph.json  network_model_quantized.tflite_c_info.json  network_model_quantized.tflite_report.json  network_null_c_graph.json  network_null_c_info.json  network_null_report.json  network_test.h5_c_graph.json  network_test.h5_c_info.json  network_test.h5_report.json
firmware/Tasks/: CleanTask.cpp  CleanTask.h  EspeakTask.cpp  EspeakTask.h  SX1276_IRQ_Handle_Task.cpp  SX1276_IRQ_Handle_Task.h  UpdateTask.cpp  UpdateTask.h  shared_context.h
firmware/Test/: aes_test.py  mic_gain.py  read_audio.py  read_spectrogram.py  read_stm32.py  wav_to_spectrogram.py
(+99 files in other folders)
